--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   provider: ^6.0.3
   http: ^0.13.4
   shared_preferences: ^2.0.15
+  firebase_core: ^1.19.2
+  cloud_firestore: ^3.3.0
 
 dev_dependencies:
   flutter_test:
