--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   shared_preferences: ^2.0.15
   firebase_core: ^1.19.2
   cloud_firestore: ^3.3.0
+  file_picker: ^3.0.4
+  firebase_storage: ^10.3.2
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
